Alignment fixed

--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -65,6 +65,7 @@ body {
     color: white;
     font-size: 4em;
     font-family: 'Josefin Sans', 'Helvetica';
+    text-align: center;
 }
 
 #name {
